--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: center;
+}
+
+ul,
+ol {
+  list-style: none;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 0px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+div {
+  width: 780px;
+  background: linear-gradient(to bottom right, #4b484b, #7d7b7de9, #4f575c);
+    border-radius: 6px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
